# dynamicteams

./: .gitignore  Cargo.toml  README.md  notes
migrations/2018-09-30-023633_users/: up.sql
migrations/2018-12-12-011935_create_orgs/: down.sql  up.sql
src/: auth.rs  database.rs  main.rs  models.rs  schema.rs  web.rs
templates/: 404.html.hbs  index.html.hbs  orgs.html.hbs  user.html.hbs
