[package]
name = "dynamicteams"
version = "0.1.0"
authors = ["Chris Prohoda <cgprohoda@gmail.com>"]

[dependencies]
rocket = "0.4"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
